--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation 'it.unimi.dsi:fastutil-core:8.5.13'
     implementation 'commons-codec:commons-codec:1.17.0'
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
-    implementation 'com.github.FireMasterK.NewPipeExtractor:NewPipeExtractor:e45fa4d37f809a07dd5bdf6f920adabe0077704f'
+    implementation 'com.github.Atemu:NewPipeExtractor:135ee8a4b0bc299c912e1ec7b2b4d7522fd58601'
     implementation 'com.github.FireMasterK:nanojson:9f4af3b739cc13f3d0d9d4b758bbe2b2ae7119d7'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
